--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,14 +9,14 @@
 
     <% if (message) { %>
      <p style="color: red;">
-        <%=  message %>
+        <%= message %> 
      </p>
     <% } %>
 
     <form action="/login" method="POST">
         <input type="text" name="username">
         <input type="password" name="password">
-        <input type="submit" value="login">
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
