--- a/client/pages/login.ejs
+++ b/client/pages/login.ejs
@@ -13,7 +13,7 @@
      </p>
     <% } %>
 
-    <form action="/login" method="POST">
+    <form action="/" method="POST">
         <input type="text" name="username">
         <input type="password" name="password">
         <input type="submit" value="Login">
