--- a/client/pages/main.ejs
+++ b/client/pages/main.ejs
@@ -28,33 +28,27 @@
               <th scope="col">Autor</th>
               <th scope="col">Editora</th>
               <th scope="col">N exemplares</th>
+              <th scope="col">Opcoes</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
+            <% for( livro of livros ) { %>
+              <tr>
+                <th scope="row"><%= livro.id %> </th>
+                <td><%= livro.titulo %> </td>
+                <td><%= livro.ano %> </td>
+                <td><%= livro.autor %> </td>
+                <td><%= livro.editora %> </td>
+                <td><%= livro.n_exemplares %> </td>
+                <td>
+                   <form action="/main/delete" method="post">
+                    <input type="hidden" name="id" value="<%= livro.id %>">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                   </form>
+                </td>
+              </tr>
+            <% } %>
+
           </tbody>
         </table>
       </div>
