--- a/client/pages/login.ejs
+++ b/client/pages/login.ejs
@@ -3,9 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
+
+<style>
+    @font-face {
+        font-family: "mont";
+        src: url(/Recanto-do-livro/fonts/Montserrat-Light.ttf);
+    }
+    *{margin: 0; padding: 0;box-sizing: border-box;}
+    body{
+        font-family: 'Times New Roman', Times, serif;
+        background: #F9F5EB;
+    }
+    h1{
+        font-family: "mont";
+        text-align: center;
+    }
+    .container{
+        width: 100vw;
+        height: 100vh;
+        background: #F9F5EB;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .box{
+        background: #EAE3D2;
+        width: 300px;
+        height: 250px;
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 15px 15px 10px gray;;
+    }
+    #user{
+        margin: 20px 0px 30px 0px;
+        border-radius: 10px;
+        border: none;
+        box-shadow: inset 0 0 7px gray;
+        text-align: center;
+        width: 250px;
+        height: 25px;
+    }
+    #user:hover{
+        background-color: rgb(231, 231, 231);
+    }
+    #passwd{
+        margin-bottom: 30px;
+        text-align: center;
+        border-radius: 10px;
+        box-shadow: inset 0 0 7px gray;
+        border: none;
+        width: 250px;
+        height: 25px;
+    }
+    #passwd:hover{
+        background-color: rgb(231, 231, 231);
+    }
+    #sub{
+        width: 150px;
+        height: 30px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: none;
+        box-shadow: 5px 10px 10px gray;
+        background: #1C3879;
+        color: white;
+        transition: 0.5s;
+    }
+    #sub:hover{
+        transition: 0.5s;
+        background-color: #607EAA;
+        box-shadow: 0 0 0;
+    }
+</style>
+
 <body>
-    <h1>Login</h1>
 
     <% if (message) { %>
      <p style="color: red;">
@@ -14,9 +88,14 @@
     <% } %>
 
     <form action="/" method="POST">
-        <input type="text" name="username">
-        <input type="password" name="password">
-        <input type="submit" value="Login">
+        <div class="container">
+            <div class="box">
+                <h1>Login</h1>
+                <input type="text" name="username" id="user">
+                <input type="password" name="password" id="passwd">
+                <input type="submit" value="Login" id="sub">
+            </div>
+        </div>
     </form>
 </body>
 </html>
