--- a/client/pages/cadastroLivro.ejs
+++ b/client/pages/cadastroLivro.ejs
@@ -22,35 +22,35 @@
           <h1 class="col-8">Cadastro de livros</h1>
       </nav>
 
-        <form>
+        <form method="post" action="/cadlivro/save">
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Titulo</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" name="titulo" value="">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Ano</label>
             <div class="col-sm-10">
-              <input type="year" class="form-control">
+              <input type="year" class="form-control" name="ano" value="">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Autor</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" name="autor" value="">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Editora</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" name="editora" value="">
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-sm-2 col-form-label">N exemplos</label>
+            <label class="col-sm-2 col-form-label">N exemplares</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" name="n_exemplares" value="">
             </div>
           </div>
 
