--- a/client/pages/main.ejs
+++ b/client/pages/main.ejs
@@ -65,7 +65,8 @@
                     <input type="hidden" name="id" value="<%= livro.id %>">
                     <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                    </form>
-                   <a class="btn btn-info" href="/cadlivro?id=<%= livro.id %>">Editar</a>
+                   <br>
+                   <a class="btn btn-info" href="/cadlivro?id=<%= livro.id %>"><i class="bi bi-pencil-square"></i></a>
                 </td>
               </tr>
             <% } %>
