--- a/client/pages/cadastro.ejs
+++ b/client/pages/cadastro.ejs
@@ -41,23 +41,23 @@
           <h1 class="col-8">Cadastro de Usuarios</h1>
       </nav>
 
-        <form class="cad-nav">
+        <form method="post" action="/cadastro/save" class="cad-nav">
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Nome</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control">
+              <input type="text" name="nome" class="form-control">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Login</label>
             <div class="col-sm-10">
-              <input type="email" class="form-control">
+              <input type="text" name="login" class="form-control">
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Senha</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control">
+              <input type="password" name="password" class="form-control">
             </div>
           </div>
 
