Acrescentendo novos botões para retroceder

--- a/client/pages/cadastroLivro.ejs
+++ b/client/pages/cadastroLivro.ejs
@@ -15,7 +15,9 @@
 
     <div class="container">
       <nav class="navbar navbar-light">
-
+        <div class="voltar">
+          <a href="./main" class="btn btn-primary">voltar</a>
+        </div>
           <a class="col-3 navbar-brand" href="#">
             <img src="nodejs.png" width="50%" alt="">
           </a>
