--- a/client/pages/main.ejs
+++ b/client/pages/main.ejs
@@ -13,6 +13,9 @@
     <div class="container">
       <nav class="navbar navbar-light">
         <a href="/cadlivro" class=" col-1 btn btn-primary">Novo</a>
+        <div class="voltar">
+          <a href="/" class="btn btn-primary">Deslogar</a>
+        </div>
 
           <h1 class="col-4">Listagem de Livros</h1>
 
